# GobbletHaskell

./: README.md  gobblet.cabal
src/: Main.hs  Minimax.hs  Move.hs  Rules.hs  State.hs
