name:                gobblet
version:             0.1.0.0
category:            Web
build-type:          Simple
cabal-version:       >=1.10


executable gobblet
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       State, Rules, Move, Minimax
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , array
                     , parsec
                     , ansi-terminal
                     , random
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

